Fix answer circle bug
Answer circle stopped being hidden by eight ball overflow when opening list of questions.

Changed to hide answer circle when eight ball is shown, reappear when needed

--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,7 @@ p#eight {
   margin: 25% auto;
   height: 182px;
   width: 182px;
+  display: none;
 }
 
 #inner-circle {    
